<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Esport42 Beta</string>
    <string name="hello_world">Guillian is a fagget.</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- AccountFragment -->
    <string name="connection">Connexion</string>
    <string name="register">Inscription</string>

    <!-- LoginFragment -->
    <string name="form_title">CONNEXION AU COMPTE UTILISATEUR</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="password_forgot"><u>Mot de passe oublié ?</u></string>

    <!-- RegisterFragment -->
    <string name="register_form_title">CREATION D\'UN COMPTE UTILISATEUR</string>
    <string name="email">Adresse E-Mail</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="long_lorem">        Pour la second edition de la Quadrlan nous reunirons 320 joueurs pour un tournois de 64 Equipes sur le jeu de League of legends et pour la second fois s’imposer comme la Lan dedie a League of Legends la plus grande de france.\n\n
Alors que notre plateform de streaming touché jusqu’a 1700 personnes simultanément. Cette annees nous accerons beaucoup plus l’evenem,nt autour d’une communication efficaces pour atteindre un nombre de personnes bien plus elevé !\n

\nEsport42 posséde cette fois ci une regie qui assurera la qualité du stream en tout temps, que ce soit pour la retransmission des match aux diffusion de potentiel pub durant le stream. Cette meme Equipes s’occupera des layout, ce sont les habillage du stream qui permet d’incrusté les camera ou encore les logo pendant le stream.\n

\nPour rendre le tournois encore plus interessant, Esport42 investie 1000e dans le Cash prize. Cette sommes est amené a evoluer avec les aide et sponsor qui vont se joindre a nous. Plus le cash prize gonflera plus la visibilité de ce tournoi augmentera. Nous pourrons inviter des team populaire si le cash prize est intéressant !\n</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <!-- DashboardActivity -->
    <string name="litigation_map">Carte des litiges</string>
    <string name="last_validate_match">Dernier match validé</string>
    <string name="tickets">Tickets</string>
    <string name="event_edit">Mettre à jour un évènement</string>
    <string name="event_create">Créer un évènement</string>
    <string name="article_edit">Mettre à jour un article</string>
    <string name="article_create">Créer un article</string>

	<!-- AccountSettingsFragment -->
	<string name="adresse">Adresse</string>
	<string name="phone">Numéro de telephone</string>
	<string name="firstname">Nom</string>
	<string name="lastname">Prénom</string>
	<string name="save_button">Sauvegarder</string>
	<string name="change_password">Changer le mot de passe</string>

	<!-- PostArticleActivity -->
	<string name="title">Titre</string>
	<string name="resume">Resumer</string>
	<string name="content">Contenue</string>
	<string name="picture">Image</string>

    <!-- PostEventActivity -->
    <string name="name">Nom</string>
    <string name="team_number">Nombre de team</string>
    <string name="player_team">Nombre de joueurs par team</string>
    <string name="start_date_reg">Debut de l\'inscription</string>
    <string name="end_date_reg">Fin de l\'inscription</string>
    <string name="start_event">Debut de l\'evenement: </string>
    <string name="end_event">Fin de l\'evenement: </string>
    <string name="price">Cash Price</string>
    <string name="place_number">Nombre de place</string>

    <!-- EventAcitivity -->
    <string name="tournament_tree">Arbre du tournoi</string>
	<string name="stream">Stream</string>

    <!-- Error -->
    <string name="invalid_field">Ce champ ne peux etre vide</string>
	<string name="title_activity_event">EventActivity</string>
	<string name="title_activity_team_list">TeamListActivity</string>
</resources>
