<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/primary_light"
			android:orientation="horizontal"
			tools:context="com.pkesslas.esport42.activity.DashboardActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:gravity="center"
			android:padding="10dp"
			android:hint="@string/username"
			android:textColor="@color/primary_dark"
			/>

		<EditText
			android:id="@+id/firstname"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/username"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:gravity="center"
			android:padding="10dp"
			android:hint="@string/firstname"
			android:textColor="@color/primary_dark"
			/>

		<EditText
			android:id="@+id/lastname"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/firstname"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:inputType="textPersonName"
			android:hint="@string/lastname"
			android:gravity="center"
			android:padding="10dp"
			android:textColor="@color/primary_dark"
			/>

		<EditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/lastname"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:inputType="textEmailAddress"
			android:hint="@string/email"
			android:gravity="center"
			android:padding="10dp"
			android:textColor="@color/primary_dark"
			/>

		<EditText
			android:id="@+id/address"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/email"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:hint="@string/adresse"
			android:inputType="textPostalAddress"
			android:gravity="center"
			android:padding="10dp"
			android:textColor="@color/primary_dark"
			/>

		<EditText
			android:id="@+id/phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/address"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:inputType="phone"
			android:hint="@string/phone"
			android:gravity="center"
			android:padding="10dp"
			android:textColor="@color/primary_dark"
			/>

		<TextView
			android:id="@+id/change_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/phone"
			android:padding="10dp"
			android:background="@color/strong_accent"
			android:textColor="@android:color/white"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:gravity="center"
			android:text="@string/change_password"
			/>

		<TextView
			android:id="@+id/save"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/change_password"
			android:padding="10dp"
			android:background="@color/strong_accent"
			android:textColor="@android:color/white"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:gravity="center"
			android:text="@string/save_button"
			/>

	</RelativeLayout>
</ScrollView>