<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/primary_light"
                tools:context="com.pkesslas.esport42.activity.DashboardActivity">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        >
        <TextView
            android:id="@+id/last_validate_match"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginRight="2dp"
            android:background="@color/primary_light"
            android:text="@string/last_validate_match"/>

        <TextView
            android:id="@+id/litigation_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:background="@color/primary_light"
            android:text="@string/litigation_map"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_below="@+id/row1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ticket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:color/white"
            android:text="@string/tickets"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_below="@+id/row2"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/article_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="2dp"
            android:background="@color/primary_light"
            android:text="@string/article_create"
            />
        <TextView
            android:id="@+id/article_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:background="@color/primary_light"
            android:text="@string/article_edit"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_below="@+id/row3"
        android:background="@color/primary_light"
        android:layout_height="wrap_content">

    </LinearLayout>
</RelativeLayout>

