<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_light">

    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:text="@string/register_form_title"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary_light"
            android:hint="@string/username"
            android:textColor="@color/primary_text"
            android:singleLine="true"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/description"
            android:inputType="text"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary_light"
            android:hint="@string/password"
            android:singleLine="true"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_text"
            android:layout_below="@+id/username"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/password_retype"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary_light"
            android:hint="@string/password"
            android:singleLine="true"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_text"
            android:textAlignment="center"
            android:layout_below="@+id/password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary_light"
            android:hint="@string/email"
            android:singleLine="true"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_text"
            android:layout_below="@+id/password_retype"
            android:inputType="textEmailAddress"/>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/email"
            custom:pb_colorNormal="@color/strong_accent"
            custom:pb_colorPressed="@android:color/holo_blue_dark" />
    </RelativeLayout>
</RelativeLayout>