<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Spinner
			android:id="@+id/article_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"/>
		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_below="@id/article_title"
			android:layout_margin="10dp"
			android:text="@string/title"
			android:textSize="20sp"/>

		<EditText
			android:id="@+id/title_box"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/title"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"/>


		<TextView
			android:id="@+id/resume"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/title_box"
			android:layout_centerHorizontal="true"
			android:layout_margin="10dp"
			android:text="@string/resume"
			android:textSize="20sp"/>

		<EditText
			android:id="@+id/resume_box"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/resume"
			android:inputType="textMultiLine"
			android:gravity="top|left"
			android:scrollbars="vertical"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:lines="3"/>

		<TextView
			android:id="@+id/content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/resume_box"
			android:layout_centerHorizontal="true"
			android:layout_margin="10dp"
			android:text="@string/content"
			android:textSize="20sp"/>

		<EditText
			android:id="@+id/content_box"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textMultiLine"
			android:gravity="top|left"
			android:scrollbars="vertical"
			android:layout_below="@+id/content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:lines="10"
			/>

		<TextView
			android:id="@+id/submit"
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:text="Envoyer"
			android:layout_below="@id/content_box"
			android:textColor="@android:color/white"
			android:layout_marginTop="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginBottom="40dp"
			android:gravity="center"
			android:background="@color/primary"/>
	</RelativeLayout>
</ScrollView>
